--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -17,7 +18,10 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
-    "sort-by": "^1.2.0"
+    "react-toastify": "^10.0.5",
+    "sort-by": "^1.2.0",
+    "swiper": "^11.1.1",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
