--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
+    "sweetalert": "^2.1.2",
     "swiper": "^11.1.1",
     "toastify": "^2.0.1"
   },
